--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +8,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(287.56deg, rgba(128, 0, 255, 0.2) 0%, rgba(0, 0, 0, 0) 100%), linear-gradient(107.83deg, rgba(204, 0, 255, 0.2) -0.41%, rgba(0, 0, 0, 0) 100%), rgba(11, 247, 50, 0.921);;
 }
 
 code {
