--- a/src/components/Player/player.style.css
+++ b/src/components/Player/player.style.css
@@ -55,7 +55,7 @@
     /* overflow: hidden; */
     overflow-x: hidden;
     overflow-y: scroll;
-    line-height: 10px;
+
 }
 
 .music-desp {
@@ -75,4 +75,11 @@
     align-items: center;
     justify-content: center;
     padding: 1rem 0;
+}
+
+.lyrics-line {
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 30px;
+    color: rgb(39, 39, 39);
 }
